@@ -1,5 +1,7 @@
 AUX fusepod-0.5.1-libgpod-api-fix.patch 566 RMD160 b2f82e2a92396eba3d0a78b4281689fdaf71f6bd SHA1 26c8306c90a3dc764a29143ec066684480e6ba15 SHA256 e7b70b7f1cc464330053195a7dca2e219e17a3ab1481ea4b1cbe9a7669000236
 DIST fusepod-0.5.1.tar.bz2 78547 RMD160 ad68b3f6c81a3ce7546771a8b2fd3dd6ce061447 SHA1 61fda80b27b0305fbfa26ba58d395b4ddbd72525 SHA256 2fac657ca55deab21bc734180a290a50baa0ab78f6f602d80d9cab2687e624d6
+DIST fusepod-0.5.2.tar.bz2 80923 RMD160 34b47ba7247afb4bf809d6088c6f8e32ca1b1eab SHA1 706f0541e80a3e72e74db384503198e07a2b4b35 SHA256 210d77cb2ec7701d4af681e63c4f52bc4d0c8cbfa493f55d3d9580e7106b857f
 EBUILD fusepod-0.5.1.ebuild 694 RMD160 32ea2028d4b97f20340d463cc33095a215a3c9c1 SHA1 573339d02cdc9915dd17339f52a1a84b1937e022 SHA256 cc9131b2328c950ffd20ea5bc8dabf55acae772a8a338909cb541892e3704a9b
-MISC ChangeLog 287 RMD160 41afdc8d56e293fc0ebd69ed8a7487e1a0b832c8 SHA1 ac211ece9022220ad253238d79ade86f251c1ac9 SHA256 efc72097fe2eb054e2720ba472b0f0134c8b0df883ff97983632c4767b9d7b0f
+EBUILD fusepod-0.5.2.ebuild 567 RMD160 82f5c0abeb9bfa2b595760968ad73b75248d2d07 SHA1 a573142e4b6d697eb36de14d0db8e6531c7baffe SHA256 bd01932ffc2f186f037e945ee7150543153d02dfa275f48fdbbbd747f40584f6
+MISC ChangeLog 379 RMD160 95cae1487b2d655d2a2cb47be93ff01d4fa49839 SHA1 b7f41ab475a2b7df2b75118c1b14a6522695a2e3 SHA256 ee32d8773028b299b7484acffb85389cc795fe6bddbcce7d7dc8e13591bb6493
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
