@@ -1,0 +1,23 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+DESCRIPTION="A userspace filesystem to mount your iPod into a
+directory for easy browsing"
+HOMEPAGE="http://sourceforge.net/projects/fusepod"
+SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86"
+IUSE=""
+
+DEPEND="sys-fs/fuse
+	media-libs/libgpod
+	media-libs/taglib"
+RDEPEND="${DEPEND}"
+
+src_install() {
+	emake DESTDIR="${D}" install || die "emake install failed"
+	dodoc AUTHORS ChangeLog README THANKS TODO
+}
